<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="himesp6.com.cis2237.doodlz.ColorDialogFragment"
    android:columnCount="2"
    android:orientation="vertical"
    android:useDefaultMargins="true">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_color_dialog"
        android:id="@+id/txtColorTitle"
        android:textStyle="bold"
        android:layout_columnSpan="2"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_alpha"
        android:id="@+id/txtAlpha"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="right" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekAlpha"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="255" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_red"
        android:id="@+id/txtRed"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="right" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekRed"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="255" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_green"
        android:id="@+id/txtGreen"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="right" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekGreen"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="255" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_blue"
        android:id="@+id/txtBlue"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="right" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBlue"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="255" />

    <View
        android:id = "@+id/colorView"
        android:layout_height="@dimen/color_view_height"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:gravity="fill_horizontal"
        android:layout_width="wrap_content" />

</GridLayout>
